fix: missing margin from the last paragraph in a list

--- a/assets/css/components/markdown/typography.css
+++ b/assets/css/components/markdown/typography.css
@@ -35,6 +35,10 @@ ol {
     ul, figure {
       @apply mt-4;
     }
+
+    p:last-child {
+      @apply mb-6;
+    }
   }
 }
 
